cmake_minimum_required(VERSION 3.15)
project(competitive_coding)

set(CMAKE_CXX_STANDARD 17)

# add_executable(tree_matching CSES/tree_algorithms/tree_matching.cpp)
# add_executable(room_allocation CSES/Sorting_and_Searching/room_allocation.cpp)
# add_executable(counting_divisors CSES/Mathematics/counting_divisors.cpp)
add_executable(sum_of_divisors CSES/Mathematics/sum_of_divisors.cpp)